--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -1,3 +1,5 @@
+@import url('components.css');
+
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap'); */
 @font-face {
     font-family: 'Poppins';
@@ -201,8 +203,8 @@ body>main {
     position: relative;
 }
 
-body>main>h1{
-    margin-bottom:3rem;
+body>main>h1 {
+    margin-bottom: 3rem;
     text-align: center;
 }
 
@@ -306,133 +308,6 @@ aside.filtres header button {
 
 /** COMMON COMPONENTS */
 
-#scroll-to-top {
-    opacity: 0.5;
-    height: 2rem;
-    width: 2rem;
-    position: fixed;
-    bottom: 1rem;
-    left: 1rem;
-    z-index: 2;
-}
-
-#scroll-to-top:hover {
-    opacity: 1;
-}
-
-
-.cta {
-    font-weight: 500;
-    display: inline-block;
-    position: relative;
-    text-transform: uppercase;
-    cursor: pointer;
-    color: var(--primary);
-}
-
-.cta,
-.cta::before {
-    transition: all 0.5s ease-in-out;
-}
-
-.cta::before {
-    content: '>';
-    display: block;
-    position: absolute;
-    right: -15px;
-}
-
-.cta:hover::before {
-    right: -22.5px;
-}
-
-.pagination-module {
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    flex-wrap: wrap;
-    margin: 5rem 0;
-}
-
-.pagination-module .precedent .cta::before {
-    content: '<';
-    left: -25px;
-    right: initial;
-}
-
-.pagination-module .precedent .cta:hover::before {
-    left: -35px;
-}
-
-.pagination-module .page-btn {
-    color: var(--black);
-
-}
-
-.pagination-module a.page-btn {
-    padding: 2.5px 11.5px;
-}
-
-.pagination-module a.page-btn.active,
-.pagination-module a.page-btn:hover {
-    color: var(--white);
-    background: var(--primary);
-}
-
-
-.share,
-.share.compact {
-    display: block;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    font-weight: 500;
-}
-
-@media screen and (min-width: 768px) {
-    .share {
-        display: flex;
-        align-items: center;
-
-    }
-}
-
-
-
-.share.compact .socials {
-    margin-left: 0;
-}
-
-.share.tiny,
-.share.tiny .actions,
-.share.tiny .actions>* {
-    display: block;
-    margin-top: 1rem;
-}
-
-.share svg {
-    width: 23px;
-    height: 23px;
-    font-size: 1.2rem;
-    margin-right: 0.5rem;
-}
-
-.share .print {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 0.85rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.share .actions {
-    display: flex;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-
 
 .catalog img {
     height: 15rem;
@@ -489,7 +364,7 @@ article.card.listing .date-item {
     color: var(--secondary-dark);
 }
 
-
+/*
 .card-complex {
     background: black;
     display: grid;
@@ -549,7 +424,7 @@ article.card.listing .date-item {
         object-position: center center;
     }
 }
-
+*/
 #article-single>header {
     background-color: black;
     background-position: bottom;
@@ -797,6 +672,7 @@ article.card.listing .date-item {
 
 
 body>footer {
+    margin-top:3rem;
     padding: 1rem;
     background: var(--bs-black);
     color: var(--bs-white);
@@ -983,6 +859,44 @@ div.embedVideo {
     color: black;
 }
 
+body>main #casting {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+}
+
+body>main #casting>*{
+    flex:1;
+}
+body>main #casting aside {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    min-width:23rem;
+}
+
+@media screen and (min-width: 1200px) {
+    body>main #casting {
+        flex-wrap: nowrap;
+    }
+
+    body>main #casting aside .responsive-card {
+        flex-direction: column;
+    }
+
+    body>main #casting aside .responsive-card img {
+        max-width: max-content;
+        border-radius: 0.7rem 0.7rem 0 0 ;
+    }
+}
+
+body>main #casting section {
+    flex: 1 1 auto;
+}
+
+body>main #casting aside {
+    flex: 1 1 300px;
+}
 
 #casting-single aside#meta {
     padding: 1.5rem 2rem;
@@ -991,6 +905,15 @@ div.embedVideo {
 #casting-single pre {
     font-size: 1.2rem;
     font-family: 'Poppins', sans-serif;
+}
+
+/* ========== FILTRE : CASTING */
+#casting-filtre .input-group {
+    margin-bottom: 0 !important;
+}
+
+div#casting-filtre {
+    margin-bottom: 35px;
 }
 
 body>header svg {
@@ -1111,54 +1034,6 @@ article.event>div:last-child {
 
 #backdrop.active {
     display: block;
-}
-
-.shadow-box {
-    background: #FFF;
-    color: #000;
-    position: fixed;
-
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    width: 100%;
-    height: 90vh;
-    max-width: 35rem;
-
-    z-index: 10000;
-    display: flex;
-    flex-direction: column;
-}
-
-.shadow-box header {
-    background-color: #000;
-    color: #FFF;
-    padding: 0.5rem;
-}
-
-.shadow-box header h2 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.5rem;
-}
-
-.shadow-box main {
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding: 0.5rem;
-}
-
-.shadow-box footer {
-    background: var(--black);
-    color: var(--white);
-    padding: 1rem;
-    display: flex;
-    gap: 1rem;
-}
-
-.shadow-box footer [type="submit"] {
-    flex: 1 1 auto;
 }
 
 /* Modal styling */
@@ -1315,22 +1190,4 @@ article.event>div:last-child {
         display: none;
     }
 
-}
-
-.cookie-modal .shadow-box-controls {
-    padding: 1rem;
-    padding-bottom: 3rem;
-    display: flex;
-    gap: 1rem;
-}
-
-.add-btn {
-    display:flex;
-    align-items:center;
-    gap:1rem;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 600;
-    padding: 0.9rem;
-    line-height: 1rem;
 }
