--- a/public/assets/css/lareponse.css
+++ b/public/assets/css/lareponse.css
@@ -220,7 +220,7 @@ body>main>h1::before {
     margin: 0 auto;
 }
 
-fieldset label:has(+[required])::after {
+fieldset label:has(+[required])::after{
     content: " *";
     color: var(--primary);
 }
@@ -742,9 +742,10 @@ body>footer #copyright {
     color: var(--black);
 }
 
-form.add-job fieldset{
-    margin:2rem 0;
+form.add-job fieldset {
+    margin: 2rem 0;
 }
+
 /* legends and labels serve as titles */
 form.add-job fieldset>label {
     color: var(--primary);
@@ -764,7 +765,7 @@ form.add-job label input {
 }
 
 form.add-job fieldset>div {
-    margin-top:2rem;
+    margin-top: 2rem;
     display: flex;
     gap: 1rem;
 }
@@ -772,14 +773,16 @@ form.add-job fieldset>div {
 form.add-job fieldset>div>* {
     flex: 1 1 auto;
 }
-#add_job_content .dates{
-    display:flex;
-    flex-wrap:wrap;
+
+#add_job_content .dates {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#add_job_annonceur label{
-    margin-top:1rem;
+#add_job_annonceur label {
+    margin-top: 1rem;
 }
+
 form.add-job legend {
     color: var(--primary);
     font-size: 1.5rem;
@@ -1308,4 +1311,51 @@ body>main>.add-btn {
     /* background: var(--black);
     color: var(--white); */
     padding: 0.7rem;
+}
+
+
+.korbo-trigger {
+
+    position: fixed;
+    display: flex;
+    bottom: 1rem;
+    justify-content: center;
+    width: 100%;
+    padding: 3rem;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+}
+
+#korbo main {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#korbo .bank {
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    font-weight: 600;
+}
+
+#korbo .bank :first-child {
+    grid-column: span 2;
+}
+
+#korbo .bank :nth-child(3),
+#korbo .bank :nth-child(5) {
+    color: var(--primary);
+}
+
+#korbo_delivery>div {
+    display: flex;
+    gap: 1rem;
+}
+
+#korbo_delivery>div>* {
+    flex: 1 1 auto;
+}
+
+#korbo label{
+    margin-top:0.7rem;
 }
