--- a/public/assets/css/components.css
+++ b/public/assets/css/components.css
@@ -217,10 +217,6 @@
 
 
 
-
-
-
-
 .shadow-box {
     background: #FFF;
     color: #000;
@@ -242,17 +238,7 @@
     max-width: 35rem;
 }
 
-.shadow-box header {
-    background-color: #000;
-    color: #FFF;
-    padding: 0.5rem;
-}
 
-.shadow-box header h2 {
-    margin: 0;
-    padding: 0;
-    font-size: 1.5rem;
-}
 
 .shadow-box main {
     overflow-y: auto;
@@ -261,9 +247,6 @@
 }
 
 .shadow-box footer {
-    background: var(--black);
-    color: var(--white);
-    padding: 1rem;
     display: flex;
     gap: 1rem;
 }
@@ -420,4 +403,26 @@
     width: 5rem;
     height: 5rem;
     border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+
+.line-left {
+    position: relative;
+}
+
+.line-left::before {
+    content: '';
+    width: 50px;
+    height: 3px;
+    background: var(--bs-primary);
+    display: inline-block;
+    transform: translateY(-10px);
+    margin-right: 15px;
+}
+
+.line-left.overflow::before {
+    position: absolute;
+    left: 0;
+    left: -70px;
+    top: 22.5px;
 }
