refactor: remove TinyMCE language files and unused CSS/JS assets, update textarea to use Quill editor

--- a/public/assets/css/krafto_cinergie.css
+++ b/public/assets/css/krafto_cinergie.css
@@ -77,3 +77,12 @@ input.form-control {
 .form-control{
     font-family: var(--bs-body-font-family);
 }
+
+
+[data-kx-href]{
+    cursor:pointer;
+}
+
+.wysiwyg .ql-editor{
+    height:30rem;
+}
